fix modal window z-index

--- a/src/components/Page_section/Header/Header.module.css
+++ b/src/components/Page_section/Header/Header.module.css
@@ -86,7 +86,7 @@
     height: 100%;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 5;
     background-color: rgba(0, 0, 0, 0.801);
     cursor: pointer;
 }
@@ -101,7 +101,7 @@
     height: 100%;
     top: 0;
     right: 0;
-    z-index: 2;
+    z-index: 10;
 
     padding: 60px;
     gap: 30px;
